💄 Clean up and fix spacing around author name

--- a/style.css
+++ b/style.css
@@ -120,6 +120,12 @@
   color: var(--spice-subtext);
 }
 
+.marketplace-cardSubHeader {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 #marketplace-grid .main-card-draggable {
   display: flex;
   flex-direction: column;
